Update on run assistant

--- a/index.html
+++ b/index.html
@@ -161,9 +161,9 @@
         <button
           class="btn btn-primary mr-1"
           type="submit"
-          onclick="sendRequest('create_assistant')"
+          onclick="sendRequest('run_assistant')"
         >
-          Create
+          Create and Run
         </button>
         <button
           class="btn btn-primary mr-1"
